src/front/rules.output
State 65 conflicts: 2 shift/reduce
State 69 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 154 conflicts: 2 shift/reduce
State 155 conflicts: 1 shift/reduce
State 158 conflicts: 1 shift/reduce
State 172 conflicts: 2 shift/reduce
State 173 conflicts: 2 shift/reduce
State 174 conflicts: 2 shift/reduce
State 175 conflicts: 2 shift/reduce
State 213 conflicts: 1 shift/reduce
State 214 conflicts: 24 shift/reduce
State 236 conflicts: 1 shift/reduce
State 237 conflicts: 1 shift/reduce
State 238 conflicts: 1 shift/reduce
State 239 conflicts: 24 shift/reduce
State 240 conflicts: 1 shift/reduce
State 241 conflicts: 24 shift/reduce
State 256 conflicts: 1 shift/reduce
State 257 conflicts: 1 shift/reduce
State 258 conflicts: 1 shift/reduce
State 259 conflicts: 24 shift/reduce
State 267 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program import_stmt
    2        | program export_stmt
    3        | program global_variable_stmt
    4        | program function_stmt
    5        | program type_stmt
    6        | program method_stmt
    7        | program constructor_stmt
    8        | program destructor_stmt
    9        | program stmt
   10        | ε

   11 import_stmt: IMPORT module_path AS IDENTIFIER

   12 module_path: module_path_upwards module_path_compact
   13            | module_path_compact
   14            | STRING

   15 module_path_upwards: '^' module_path_upwards
   16                    | '^'

   17 module_path_compact: IDENTIFIER '.' module_path_compact
   18                    | IDENTIFIER

   19 export_stmt: EXPORT export_item_list

   20 export_item_list: export_item ',' export_item_list
   21                 | export_item

   22 export_item: expr AS IDENTIFIER

   23 global_variable_stmt: GLOBAL identifier_item_list

   24 identifier_item_list: IDENTIFIER ',' identifier_item_list
   25                     | IDENTIFIER

   26 function_stmt: FUNCTION IDENTIFIER '(' parameter_list ')' block_stmt
   27              | FUNCTION IDENTIFIER '(' ')' block_stmt

   28 parameter_list: parameter_item ',' parameter_list
   29               | parameter_item

   30 parameter_item: IDENTIFIER

   31 type_stmt: TYPE IDENTIFIER '{' member_list '}'

   32 member_list: member_item ',' member_list
   33            | member_item

   34 member_item: IDENTIFIER '(' ')'
   35            | IDENTIFIER

   36 method_stmt: METHOD IDENTIFIER '(' parameter_list ')' OF IDENTIFIER block_stmt
   37            | METHOD IDENTIFIER '(' ')' OF IDENTIFIER block_stmt

   38 constructor_stmt: CONSTRUCTOR '(' parameter_list ')' OF IDENTIFIER block_stmt
   39                 | CONSTRUCTOR '(' ')' OF IDENTIFIER block_stmt

   40 destructor_stmt: DESTRUCTOR OF IDENTIFIER block_stmt

   41 stmt: expr
   42     | block_stmt
   43     | while_stmt
   44     | for_stmt
   45     | if_stmt
   46     | continue_stmt
   47     | break_stmt
   48     | return_stmt
   49     | try_catch_stmt
   50     | signal_stmt
   51     | var_stmt
   52     | stmt ';'

   53 block_stmt: '{' stmt_list '}'
   54           | '{' '}'

   55 stmt_list: stmt stmt_list
   56          | stmt

   57 while_stmt: WHILE expr stmt

   58 for_stmt: FOR stmt ';' expr ';' expr stmt
   59         | FOR ';' expr ';' expr stmt
   60         | FOR stmt ';' ';' expr stmt
   61         | FOR stmt ';' expr ';' stmt
   62         | FOR ';' ';' expr stmt
   63         | FOR ';' expr ';' stmt
   64         | FOR stmt ';' ';' stmt
   65         | FOR ';' ';' stmt

   66 if_stmt: IF expr stmt ELSE stmt
   67        | IF expr stmt

   68 continue_stmt: CONTINUE

   69 break_stmt: BREAK

   70 return_stmt: RETURN expr

   71 try_catch_stmt: TRY block_stmt catch_item_list FINALLY CATCH AS IDENTIFIER block_stmt
   72               | TRY block_stmt FINALLY CATCH AS IDENTIFIER block_stmt
   73               | TRY block_stmt catch_item_list

   74 catch_item_list: catch_item catch_item_list
   75                | catch_item

   76 catch_item: CATCH expr AS IDENTIFIER block_stmt

   77 signal_stmt: SIGNAL expr BECAUSE expr

   78 var_stmt: VAR assignment_item_list

   79 assignment_item_list: assignment_item ',' assignment_item_list
   80                     | assignment_item

   81 assignment_item: IDENTIFIER '=' expr
   82                | IDENTIFIER

   83 expr: assignment

   84 assignment: inline_if '=' assignment
   85           | inline_if

   86 inline_if: WHEN new THEN new ELSE new
   87          | new

   88 new: NEW elementary '(' expr_list ')'
   89    | NEW elementary
   90    | logical_or

   91 logical_or: logical_or OR logical_and
   92           | logical_and

   93 logical_and: logical_and AND bitwise_or
   94            | bitwise_or

   95 bitwise_or: bitwise_or '|' bitwise_xor
   96           | bitwise_xor

   97 bitwise_xor: bitwise_xor '^' bitwise_and
   98            | bitwise_and

   99 bitwise_and: bitwise_and '&' equality
  100            | equality

  101 equality: equality EQ relational
  102         | equality NE relational
  103         | relational

  104 relational: relational LE sum
  105           | relational GE sum
  106           | relational '<' sum
  107           | relational '>' sum
  108           | sum

  109 sum: sum '+' bitwise_shift
  110    | sum '-' bitwise_shift
  111    | bitwise_shift

  112 bitwise_shift: bitwise_shift LSHIFT term
  113              | bitwise_shift RSHIFT term
  114              | term

  115 term: term '*' prefix_op
  116     | term '/' prefix_op
  117     | term '%' prefix_op
  118     | prefix_op

  119 prefix_op: '+' prefix_op
  120          | '-' prefix_op
  121          | NOT prefix_op
  122          | '~' prefix_op
  123          | primary

  124 primary: primary '(' expr_list ')'
  125        | primary '(' ')'
  126        | primary '[' expr ']'
  127        | primary '.' IDENTIFIER
  128        | primary ':' IDENTIFIER
  129        | elementary

  130 elementary: '(' expr ')'
  131           | literal

  132 literal: NULLV
  133        | BOOL
  134        | CHAR
  135        | INT
  136        | FLOAT
  137        | STRING
  138        | IDENTIFIER

  139 expr_list: expr ',' expr_list
  140          | expr


Terminals, with rules where they appear

    $end (0) 0
    '%' <num> (37) 117
    '&' (38) 99
    '(' <num> (40) 26 27 34 36 37 38 39 88 124 125 130
    ')' <num> (41) 26 27 34 36 37 38 39 88 124 125 130
    '*' <num> (42) 115
    '+' <num> (43) 109 119
    ',' (44) 20 24 28 32 79 139
    '-' <num> (45) 110 120
    '.' (46) 17 127
    '/' <num> (47) 116
    ':' (58) 128
    ';' (59) 52 58 59 60 61 62 63 64 65
    '<' (60) 106
    '=' (61) 81 84
    '>' (62) 107
    '[' (91) 126
    ']' (93) 126
    '^' <num> (94) 15 16 97
    '{' <num> (123) 31 53 54
    '|' (124) 95
    '}' <num> (125) 31 53 54
    '~' <num> (126) 122
    error (256)
    BOOL <node> (258) 133
    CHAR <node> (259) 134
    INT <node> (260) 135
    FLOAT <node> (261) 136
    STRING <node> (262) 14 137
    IDENTIFIER <node> (263) 11 17 18 22 24 25 26 27 30 31 34 35 36 37 38 39 40 71 72 76 81 82 127 128 138
    NULLV <node> (264) 132
    IMPORT <num> (265) 11
    EXPORT <num> (266) 19
    GLOBAL <num> (267) 23
    FUNCTION <num> (268) 26 27
    TYPE <num> (269) 31
    METHOD <num> (270) 36 37
    CONSTRUCTOR <num> (271) 38 39
    DESTRUCTOR <num> (272) 40
    OF <num> (273) 36 37 38 39 40
    CONTINUE <num> (274) 68
    BREAK <num> (275) 69
    RETURN <num> (276) 70
    VAR <num> (277) 78
    TRY <num> (278) 71 72 73
    CATCH <num> (279) 71 72 76
    FINALLY <num> (280) 71 72
    SIGNAL <num> (281) 77
    BECAUSE <num> (282) 77
    IF <num> (283) 66 67
    ELSE <num> (284) 66 86
    WHILE <num> (285) 57
    FOR <num> (286) 58 59 60 61 62 63 64 65
    WHEN <num> (287) 86
    THEN <num> (288) 86
    NEW <num> (289) 88 89
    OR <num> (290) 91
    AND <num> (291) 93
    NOT <num> (292) 121
    AS <num> (293) 11 22 71 72 76
    LSHIFT <num> (294) 112
    RSHIFT <num> (295) 113
    EQ <num> (296) 101
    NE <num> (297) 102
    LE <num> (298) 104
    GE <num> (299) 105


Nonterminals, with rules where they appear

    $accept (67)
        on left: 0
    program <node> (68)
        on left: 1 2 3 4 5 6 7 8 9 10
        on right: 0 1 2 3 4 5 6 7 8 9
    import_stmt <node> (69)
        on left: 11
        on right: 1
    module_path <node> (70)
        on left: 12 13 14
        on right: 11
    module_path_upwards <node> (71)
        on left: 15 16
        on right: 12 15
    module_path_compact <node> (72)
        on left: 17 18
        on right: 12 13 17
    export_stmt <node> (73)
        on left: 19
        on right: 2
    export_item_list <node> (74)
        on left: 20 21
        on right: 19 20
    export_item <node> (75)
        on left: 22
        on right: 20 21
    global_variable_stmt <node> (76)
        on left: 23
        on right: 3
    identifier_item_list <node> (77)
        on left: 24 25
        on right: 23 24
    function_stmt <node> (78)
        on left: 26 27
        on right: 4
    parameter_list <node> (79)
        on left: 28 29
        on right: 26 28 36 38
    parameter_item <node> (80)
        on left: 30
        on right: 28 29
    type_stmt <node> (81)
        on left: 31
        on right: 5
    member_list <node> (82)
        on left: 32 33
        on right: 31 32
    member_item <node> (83)
        on left: 34 35
        on right: 32 33
    method_stmt <node> (84)
        on left: 36 37
        on right: 6
    constructor_stmt <node> (85)
        on left: 38 39
        on right: 7
    destructor_stmt <node> (86)
        on left: 40
        on right: 8
    stmt <node> (87)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 9 52 55 56 57 58 59 60 61 62 63 64 65 66 67
    block_stmt <node> (88)
        on left: 53 54
        on right: 26 27 36 37 38 39 40 42 71 72 73 76
    stmt_list <node> (89)
        on left: 55 56
        on right: 53 55
    while_stmt <node> (90)
        on left: 57
        on right: 43
    for_stmt <node> (91)
        on left: 58 59 60 61 62 63 64 65
        on right: 44
    if_stmt <node> (92)
        on left: 66 67
        on right: 45
    continue_stmt <node> (93)
        on left: 68
        on right: 46
    break_stmt <node> (94)
        on left: 69
        on right: 47
    return_stmt <node> (95)
        on left: 70
        on right: 48
    try_catch_stmt <node> (96)
        on left: 71 72 73
        on right: 49
    catch_item_list <node> (97)
        on left: 74 75
        on right: 71 73 74
    catch_item <node> (98)
        on left: 76
        on right: 74 75
    signal_stmt <node> (99)
        on left: 77
        on right: 50
    var_stmt <node> (100)
        on left: 78
        on right: 51
    assignment_item_list <node> (101)
        on left: 79 80
        on right: 78 79
    assignment_item <node> (102)
        on left: 81 82
        on right: 79 80
    expr <node> (103)
        on left: 83
        on right: 22 41 57 58 59 60 61 62 63 66 67 70 76 77 81 126 130 139 140
    assignment <node> (104)
        on left: 84 85
        on right: 83 84
    inline_if <node> (105)
        on left: 86 87
        on right: 84 85
    new <node> (106)
        on left: 88 89 90
        on right: 86 87
    logical_or <node> (107)
        on left: 91 92
        on right: 90 91
    logical_and <node> (108)
        on left: 93 94
        on right: 91 92 93
    bitwise_or <node> (109)
        on left: 95 96
        on right: 93 94 95
    bitwise_xor <node> (110)
        on left: 97 98
        on right: 95 96 97
    bitwise_and <node> (111)
        on left: 99 100
        on right: 97 98 99
    equality <node> (112)
        on left: 101 102 103
        on right: 99 100 101 102
    relational <node> (113)
        on left: 104 105 106 107 108
        on right: 101 102 103 104 105 106 107
    sum <node> (114)
        on left: 109 110 111
        on right: 104 105 106 107 108 109 110
    bitwise_shift <node> (115)
        on left: 112 113 114
        on right: 109 110 111 112 113
    term <node> (116)
        on left: 115 116 117 118
        on right: 112 113 114 115 116 117
    prefix_op <node> (117)
        on left: 119 120 121 122 123
        on right: 115 116 117 118 119 120 121 122
    primary <node> (118)
        on left: 124 125 126 127 128 129
        on right: 123 124 125 126 127 128
    elementary <node> (119)
        on left: 130 131
        on right: 88 89 129
    literal <node> (120)
        on left: 132 133 134 135 136 137 138
        on right: 131
    expr_list <node> (121)
        on left: 139 140
        on right: 88 124 139


State 0

    0 $accept: • program $end

    $default  reduce using rule 10 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    1 program: program • import_stmt
    2        | program • export_stmt
    3        | program • global_variable_stmt
    4        | program • function_stmt
    5        | program • type_stmt
    6        | program • method_stmt
    7        | program • constructor_stmt
    8        | program • destructor_stmt
    9        | program • stmt

    $end         shift, and go to state 2
    BOOL         shift, and go to state 3
    CHAR         shift, and go to state 4
    INT          shift, and go to state 5
    FLOAT        shift, and go to state 6
    STRING       shift, and go to state 7
    IDENTIFIER   shift, and go to state 8
    NULLV        shift, and go to state 9
    IMPORT       shift, and go to state 10
    EXPORT       shift, and go to state 11
    GLOBAL       shift, and go to state 12
    FUNCTION     shift, and go to state 13
    TYPE         shift, and go to state 14
    METHOD       shift, and go to state 15
    CONSTRUCTOR  shift, and go to state 16
    DESTRUCTOR   shift, and go to state 17
    CONTINUE     shift, and go to state 18
    BREAK        shift, and go to state 19
    RETURN       shift, and go to state 20
    VAR          shift, and go to state 21
    TRY          shift, and go to state 22
    SIGNAL       shift, and go to state 23
    IF           shift, and go to state 24
    WHILE        shift, and go to state 25
    FOR          shift, and go to state 26
    WHEN         shift, and go to state 27
    NEW          shift, and go to state 28
    NOT          shift, and go to state 29
    '{'          shift, and go to state 30
    '+'          shift, and go to state 31
    '-'          shift, and go to state 32
    '~'          shift, and go to state 33
    '('          shift, and go to state 34

    import_stmt           go to state 35
    export_stmt           go to state 36
    global_variable_stmt  go to state 37
    function_stmt         go to state 38
    type_stmt             go to state 39
    method_stmt           go to state 40
    constructor_stmt      go to state 41
    destructor_stmt       go to state 42
    stmt                  go to state 43
    block_stmt            go to state 44
    while_stmt            go to state 45
    for_stmt              go to state 46
    if_stmt               go to state 47
    continue_stmt         go to state 48
    break_stmt            go to state 49
    return_stmt           go to state 50
    try_catch_stmt        go to state 51
    signal_stmt           go to state 52
    var_stmt              go to state 53
    expr                  go to state 54
    assignment            go to state 55
    inline_if             go to state 56
    new                   go to state 57
    logical_or            go to state 58
    logical_and           go to state 59
    bitwise_or            go to state 60
    bitwise_xor           go to state 61
    bitwise_and           go to state 62
    equality              go to state 63
    relational            go to state 64
    sum                   go to state 65
    bitwise_shift         go to state 66
    term                  go to state 67
    prefix_op             go to state 68
    primary               go to state 69
    elementary            go to state 70
    literal               go to state 71


State 2

    0 $accept: program $end •

    $default  accept


State 3

  133 literal: BOOL •

    $default  reduce using rule 133 (literal)


State 4

  134 literal: CHAR •

    $default  reduce using rule 134 (literal)


State 5

  135 literal: INT •

    $default  reduce using rule 135 (literal)


State 6

  136 literal: FLOAT •

    $default  reduce using rule 136 (literal)


State 7

  137 literal: STRING •

    $default  reduce using rule 137 (literal)


State 8

  138 literal: IDENTIFIER •

    $default  reduce using rule 138 (literal)


State 9

  132 literal: NULLV •

    $default  reduce using rule 132 (literal)


State 10

   11 import_stmt: IMPORT • module_path AS IDENTIFIER

    STRING      shift, and go to state 72
    IDENTIFIER  shift, and go to state 73
    '^'         shift, and go to state 74

    module_path          go to state 75
    module_path_upwards  go to state 76
    module_path_compact  go to state 77


State 11

   19 export_stmt: EXPORT • export_item_list

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    WHEN        shift, and go to state 27
    NEW         shift, and go to state 28
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    export_item_list  go to state 78
    export_item       go to state 79
    expr              go to state 80
    assignment        go to state 55
    inline_if         go to state 56
    new               go to state 57
    logical_or        go to state 58
    logical_and       go to state 59
    bitwise_or        go to state 60
    bitwise_xor       go to state 61
    bitwise_and       go to state 62
    equality          go to state 63
    relational        go to state 64
    sum               go to state 65
    bitwise_shift     go to state 66
    term              go to state 67
    prefix_op         go to state 68
    primary           go to state 69
    elementary        go to state 70
    literal           go to state 71


State 12

   23 global_variable_stmt: GLOBAL • identifier_item_list

    IDENTIFIER  shift, and go to state 81

    identifier_item_list  go to state 82


State 13

   26 function_stmt: FUNCTION • IDENTIFIER '(' parameter_list ')' block_stmt
   27              | FUNCTION • IDENTIFIER '(' ')' block_stmt

    IDENTIFIER  shift, and go to state 83


State 14

   31 type_stmt: TYPE • IDENTIFIER '{' member_list '}'

    IDENTIFIER  shift, and go to state 84


State 15

   36 method_stmt: METHOD • IDENTIFIER '(' parameter_list ')' OF IDENTIFIER block_stmt
   37            | METHOD • IDENTIFIER '(' ')' OF IDENTIFIER block_stmt

    IDENTIFIER  shift, and go to state 85


State 16

   38 constructor_stmt: CONSTRUCTOR • '(' parameter_list ')' OF IDENTIFIER block_stmt
   39                 | CONSTRUCTOR • '(' ')' OF IDENTIFIER block_stmt

    '('  shift, and go to state 86


State 17

   40 destructor_stmt: DESTRUCTOR • OF IDENTIFIER block_stmt

    OF  shift, and go to state 87


State 18

   68 continue_stmt: CONTINUE •

    $default  reduce using rule 68 (continue_stmt)


State 19

   69 break_stmt: BREAK •

    $default  reduce using rule 69 (break_stmt)


State 20

   70 return_stmt: RETURN • expr

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    WHEN        shift, and go to state 27
    NEW         shift, and go to state 28
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    expr           go to state 88
    assignment     go to state 55
    inline_if      go to state 56
    new            go to state 57
    logical_or     go to state 58
    logical_and    go to state 59
    bitwise_or     go to state 60
    bitwise_xor    go to state 61
    bitwise_and    go to state 62
    equality       go to state 63
    relational     go to state 64
    sum            go to state 65
    bitwise_shift  go to state 66
    term           go to state 67
    prefix_op      go to state 68
    primary        go to state 69
    elementary     go to state 70
    literal        go to state 71


State 21

   78 var_stmt: VAR • assignment_item_list

    IDENTIFIER  shift, and go to state 89

    assignment_item_list  go to state 90
    assignment_item       go to state 91


State 22

   71 try_catch_stmt: TRY • block_stmt catch_item_list FINALLY CATCH AS IDENTIFIER block_stmt
   72               | TRY • block_stmt FINALLY CATCH AS IDENTIFIER block_stmt
   73               | TRY • block_stmt catch_item_list

    '{'  shift, and go to state 30

    block_stmt  go to state 92


State 23

   77 signal_stmt: SIGNAL • expr BECAUSE expr

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    WHEN        shift, and go to state 27
    NEW         shift, and go to state 28
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    expr           go to state 93
    assignment     go to state 55
    inline_if      go to state 56
    new            go to state 57
    logical_or     go to state 58
    logical_and    go to state 59
    bitwise_or     go to state 60
    bitwise_xor    go to state 61
    bitwise_and    go to state 62
    equality       go to state 63
    relational     go to state 64
    sum            go to state 65
    bitwise_shift  go to state 66
    term           go to state 67
    prefix_op      go to state 68
    primary        go to state 69
    elementary     go to state 70
    literal        go to state 71


State 24

   66 if_stmt: IF • expr stmt ELSE stmt
   67        | IF • expr stmt

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    WHEN        shift, and go to state 27
    NEW         shift, and go to state 28
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    expr           go to state 94
    assignment     go to state 55
    inline_if      go to state 56
    new            go to state 57
    logical_or     go to state 58
    logical_and    go to state 59
    bitwise_or     go to state 60
    bitwise_xor    go to state 61
    bitwise_and    go to state 62
    equality       go to state 63
    relational     go to state 64
    sum            go to state 65
    bitwise_shift  go to state 66
    term           go to state 67
    prefix_op      go to state 68
    primary        go to state 69
    elementary     go to state 70
    literal        go to state 71


State 25

   57 while_stmt: WHILE • expr stmt

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    WHEN        shift, and go to state 27
    NEW         shift, and go to state 28
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    expr           go to state 95
    assignment     go to state 55
    inline_if      go to state 56
    new            go to state 57
    logical_or     go to state 58
    logical_and    go to state 59
    bitwise_or     go to state 60
    bitwise_xor    go to state 61
    bitwise_and    go to state 62
    equality       go to state 63
    relational     go to state 64
    sum            go to state 65
    bitwise_shift  go to state 66
    term           go to state 67
    prefix_op      go to state 68
    primary        go to state 69
    elementary     go to state 70
    literal        go to state 71


State 26

   58 for_stmt: FOR • stmt ';' expr ';' expr stmt
   59         | FOR • ';' expr ';' expr stmt
   60         | FOR • stmt ';' ';' expr stmt
   61         | FOR • stmt ';' expr ';' stmt
   62         | FOR • ';' ';' expr stmt
   63         | FOR • ';' expr ';' stmt
   64         | FOR • stmt ';' ';' stmt
   65         | FOR • ';' ';' stmt

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    CONTINUE    shift, and go to state 18
    BREAK       shift, and go to state 19
    RETURN      shift, and go to state 20
    VAR         shift, and go to state 21
    TRY         shift, and go to state 22
    SIGNAL      shift, and go to state 23
    IF          shift, and go to state 24
    WHILE       shift, and go to state 25
    FOR         shift, and go to state 26
    WHEN        shift, and go to state 27
    NEW         shift, and go to state 28
    NOT         shift, and go to state 29
    '{'         shift, and go to state 30
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34
    ';'         shift, and go to state 96

    stmt            go to state 97
    block_stmt      go to state 44
    while_stmt      go to state 45
    for_stmt        go to state 46
    if_stmt         go to state 47
    continue_stmt   go to state 48
    break_stmt      go to state 49
    return_stmt     go to state 50
    try_catch_stmt  go to state 51
    signal_stmt     go to state 52
    var_stmt        go to state 53
    expr            go to state 54
    assignment      go to state 55
    inline_if       go to state 56
    new             go to state 57
    logical_or      go to state 58
    logical_and     go to state 59
    bitwise_or      go to state 60
    bitwise_xor     go to state 61
    bitwise_and     go to state 62
    equality        go to state 63
    relational      go to state 64
    sum             go to state 65
    bitwise_shift   go to state 66
    term            go to state 67
    prefix_op       go to state 68
    primary         go to state 69
    elementary      go to state 70
    literal         go to state 71


State 27

   86 inline_if: WHEN • new THEN new ELSE new

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    NEW         shift, and go to state 28
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    new            go to state 98
    logical_or     go to state 58
    logical_and    go to state 59
    bitwise_or     go to state 60
    bitwise_xor    go to state 61
    bitwise_and    go to state 62
    equality       go to state 63
    relational     go to state 64
    sum            go to state 65
    bitwise_shift  go to state 66
    term           go to state 67
    prefix_op      go to state 68
    primary        go to state 69
    elementary     go to state 70
    literal        go to state 71


State 28

   88 new: NEW • elementary '(' expr_list ')'
   89    | NEW • elementary

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    '('         shift, and go to state 34

    elementary  go to state 99
    literal     go to state 71


State 29

  121 prefix_op: NOT • prefix_op

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    prefix_op   go to state 100
    primary     go to state 69
    elementary  go to state 70
    literal     go to state 71


State 30

   53 block_stmt: '{' • stmt_list '}'
   54           | '{' • '}'

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    CONTINUE    shift, and go to state 18
    BREAK       shift, and go to state 19
    RETURN      shift, and go to state 20
    VAR         shift, and go to state 21
    TRY         shift, and go to state 22
    SIGNAL      shift, and go to state 23
    IF          shift, and go to state 24
    WHILE       shift, and go to state 25
    FOR         shift, and go to state 26
    WHEN        shift, and go to state 27
    NEW         shift, and go to state 28
    NOT         shift, and go to state 29
    '{'         shift, and go to state 30
    '}'         shift, and go to state 101
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    stmt            go to state 102
    block_stmt      go to state 44
    stmt_list       go to state 103
    while_stmt      go to state 45
    for_stmt        go to state 46
    if_stmt         go to state 47
    continue_stmt   go to state 48
    break_stmt      go to state 49
    return_stmt     go to state 50
    try_catch_stmt  go to state 51
    signal_stmt     go to state 52
    var_stmt        go to state 53
    expr            go to state 54
    assignment      go to state 55
    inline_if       go to state 56
    new             go to state 57
    logical_or      go to state 58
    logical_and     go to state 59
    bitwise_or      go to state 60
    bitwise_xor     go to state 61
    bitwise_and     go to state 62
    equality        go to state 63
    relational      go to state 64
    sum             go to state 65
    bitwise_shift   go to state 66
    term            go to state 67
    prefix_op       go to state 68
    primary         go to state 69
    elementary      go to state 70
    literal         go to state 71


State 31

  119 prefix_op: '+' • prefix_op

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    prefix_op   go to state 104
    primary     go to state 69
    elementary  go to state 70
    literal     go to state 71


State 32

  120 prefix_op: '-' • prefix_op

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    prefix_op   go to state 105
    primary     go to state 69
    elementary  go to state 70
    literal     go to state 71


State 33

  122 prefix_op: '~' • prefix_op

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    prefix_op   go to state 106
    primary     go to state 69
    elementary  go to state 70
    literal     go to state 71


State 34

  130 elementary: '(' • expr ')'

    BOOL        shift, and go to state 3
    CHAR        shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    IDENTIFIER  shift, and go to state 8
    NULLV       shift, and go to state 9
    WHEN        shift, and go to state 27
    NEW         shift, and go to state 28
    NOT         shift, and go to state 29
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    '~'         shift, and go to state 33
    '('         shift, and go to state 34

    expr           go to state 107
    assignment     go to state 55
    inline_if      go to state 56
    new            go to state 57
    logical_or     go to state 58
    logical_and    go to state 59
    bitwise_or     go to state 60
    bitwise_xor    go to state 61
    bitwise_and    go to state 62
    equality       go to state 63
    relational     go to state 64
    sum            go to state 65
    bitwise_shift  go to state 66
    term           go to state 67
    prefix_op      go to state 68
    primary        go to state 69
    elementary     go to state 70
    literal        go to state 71


State 35

    1 program: program import_stmt •

    $default  reduce using rule 1 (program)


State 36

    2 program: program export_stmt •

    $default  reduce using rule 2 (program)


State 37

    3 program: program global_variable_stmt •

    $default  reduce using rule 3 (program)


State 38

    4 program: program function_stmt •

    $default  reduce using rule 4 (program)


State 39

    5 program: program type_stmt •

    $default  reduce using rule 5 (program)


State 40

    6 program: program method_stmt •

    $default  reduce using rule 6 (program)


State 41

    7 program: program constructor_stmt •

    $default  reduce using rule 7 (program)


State 42

    8 program: program destructor_stmt •

    $default  reduce using rule 8 (program)


State 43

    9 program: program stmt •
   52 stmt: stmt • ';'

    ';'  shift, and go to state 108

    $default  reduce using rule 9 (program)


State 44

   42 stmt: block_stmt •

    $default  reduce using rule 42 (stmt)


State 45

   43 stmt: while_stmt •

    $default  reduce using rule 43 (stmt)


State 46

   44 stmt: for_stmt •
